Applications/HomeCDN/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homecdn
  labels:
    reloader.stakater.com/reload: 'disabled'  # Enables reloader for this namespace
