Applications/HomeCDN/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homecdn
  labels:
    app.kubernetes.io/component: 'application'
spec:
  selector:
    app.kubernetes.io/name: homecdn
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
